--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.36.0'
+#version: '28.2.2'
 
 services:
   pg:
@@ -6,6 +6,8 @@ services:
     container_name: footballbot_db
     restart: always
     environment:
+      POSTGRES_DB: footballbot_db       # добавь
+      POSTGRES_USER: postgres           # добавь
       POSTGRES_PASSWORD: 1
     ports:
       - 5434:5432
@@ -22,6 +24,18 @@ services:
     command: sh -c "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
     ports:
       - '8000:8000'
+
+
+  telegram-bot:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: [ "python", "main.py" ]
+
+    restart: always
+    depends_on:
+      - pg
+
 
 volumes:
   pg_data:
