--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,15 @@ asgiref==3.8.1
 attrs==25.3.0
 certifi==2025.6.15
 Django==5.2.3
+django-environ==0.12.0
+env==0.1.0
 frozenlist==1.7.0
 idna==3.10
 magic-filter==1.0.12
 multidict==6.5.1
 propcache==0.3.2
+psycopg-binary==3.2.9
+psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
